# jst

./: .env.example  .gitignore  backend_logic.md  init_db.py  main.py  poc_v0.py  pyproject.toml  requirements.txt
app/: README.md  crud.py  database.py  main.py  models.py  schemas.py
frontend/: README.md  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  loading.tsx  metadata.ts  page.tsx
frontend/app/jurisdiction/: loading.tsx  page.tsx
frontend/components/: ChartComponent.tsx  JurisdictionForm.tsx  JurisdictionSummary.tsx  LeafletMap.tsx  LookupForm.tsx  MapComponent.tsx
frontend/lib/api/: index.ts
frontend/lib/types/: index.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: JurisdictionChart.tsx  JurisdictionForm.tsx  JurisdictionMap.tsx  JurisdictionSummary.tsx  LookupForm.tsx  PopulationChart.tsx  ZipCodeMap.tsx
frontend/src/app/jurisdiction/: page.tsx
frontend/src/app/lookup/: page.tsx
